<resources>
    <string name="back">Zurück</string>
    <string name="okay">Okay</string>
    <string name="or">oder</string>
    <string name="cancel">Abbrechen</string>
    <string name="previous">Zurück</string>
    <string name="next">Vor</string>
    <string name="shared_preferences_file_key">de.timseidel.doppelkopf.shared_preferences</string>
    <string name="shared_preferences_group_id_key">current_group_id</string>
    <string name="app_name">Doppelkopf</string>
    <string name="navigation_title_session_history">Runden</string>
    <string name="navigation_title_group_statistic">Statistik</string>
    <string name="navigation_title_member_ranking">Ranglisten</string>
    <string name="session_members">Mitspielende</string>
    <string name="member">Spieler:in</string>
    <string name="add_member">Weitere Mitspieler:in</string>
    <string name="desc_create_session_button">Button to create a new session</string>
    <string name="doko_session">Doppelkopfabend</string>
    <string name="group_name">Gruppenname</string>
    <string name="group_name_hint">Lege einen Namen für eure Doppelkopfgruppe fest.</string>
    <string name="group_toggle_bockrunden_hint_short">Lege fest, ob ihr Spiele als Bockrunden kennzeichnen könnt.</string>
    <string name="group_toggle_bockrunden_hint">Lege fest, ob ihr Spiele als Bockrunden kennzeichnen könnt. Die App nimmt an, dass deren Wertung von euch verdoppelt wurde. Für Bockrunden werden zusätzliche Statistiken erzeugt. Ihr könnt diese Einstellung später noch ändern.</string>
    <string name="group_settings_bockrunden_hint">Lege fest, ob ihr Spiele als Bockrunden kennzeichnen könnt. Die App nimmt an, dass deren Wertung von euch verdoppelt wurde. Für Bockrunden werden zusätzliche Statistiken erzeugt.</string>
    <string name="session_general_data">Allgemein</string>
    <string name="group_general_data_heading">Allgemein</string>
    <string name="title_welcome">Los geht\'s!</string>
    <string name="title_group_creation">Doppelkopfgruppe erstellen</string>
    <string name="title_session_creation">Doppelkopfrunde erstellen</string>
    <string name="title_game_creation">Spiel erstellen</string>
    <string name="title_game_history">Spielverlauf</string>
    <string name="title_game_edit">Spiel bearbeiten</string>
    <string name="title_group_settings">Gruppeneinstellung anpassen</string>
    <string name="title_session_statistic">Statistik</string>
    <string name="game_creation_member_assignment">Parteizuordnung</string>
    <string name="game_creation_member_assignment_factions">(♣ Re, ♦ Contra)</string>
    <string name="faction_contra">Contra</string>
    <string name="faction_re">Re</string>
    <string name="faction_select_re_desc">Select re faction</string>
    <string name="faction_select_contra_desc">Select contra faction</string>
    <string name="game_result">Spielergebnis</string>
    <string name="game_features">Spieleigenschaften</string>
    <string name="desc_button_decrease_tacken">Decrease tacken</string>
    <string name="desc_button_increase_tacken">Increase tacken</string>
    <string name="create_session_unable_to_create">Doppelkopfabend kann nicht erstellt werden. Stell sicher, dass es mindestens 4 Spieler:innen und einen Namen gibt.</string>
    <string name="create_group_unable_to_create">Die Doppelkopfgruppe kann nicht erstellt werden. Stell sicher, dass keine Namen doppelt sind und du einen Titel hast.</string>
    <string name="create_group_unable_to_create_groupcode">Die Doppelkopfgruppe kann nicht erstellt werden. Bitte versuche es später erneut.</string>
    <string name="tacken">Tacken</string>
    <string name="desc_history_item_member_faction_icon">Faction of the member in this game</string>
    <string name="loading_finished">Fertig</string>
    <string name="loading_games">Lade Spiele…</string>
    <string name="loading_session_members">Lade Mitspieler…</string>
    <string name="loading_sessionInfos">Lade Abendübersichten…</string>
    <string name="loading_session">Lade Doppelkopfabend…</string>
    <string name="loading_session_no_success">Der Doppelkopfabend konnte nicht geladen werden.</string>
    <string name="loading_group">Lade Doppelkopfgruppe…</string>
    <string name="loading_group_no_success">Die Gruppe konnte nicht geladen werden.</string>
    <string name="save">Speichern</string>
    <string name="game_saved">Spiel gespeichert!</string>
    <string name="game_updated">Spiel aktualisiert!</string>
    <string name="game_creation_error">Das Spiel wird nicht erstellt, da die Einstellungen nicht gültig sind.</string>
    <string name="game_creation_disabled_message">Das Erstellen neuer Spiele ist für diese Gruppe derzeit deaktiviert.</string>
    <string name="game_edit_error">Das Spiel wird nicht aktualisiert, da die Einstellungen nicht gültig sind.</string>
    <string name="game_edit_disabled_message">Das Ändern dieses Spiels ist leider nur möglich, wenn es innerhalb der letzten 24 Stunden gespielt wurde.</string>
    <string name="check_is_bockrunde">Ist Bockrunde</string>
    <string name="enter_group_code">Gruppencode eingeben</string>
    <string name="hint_group_code">000000</string>
    <string name="join_group">Gruppe beitreten</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="leave_group">Gruppe verlassen</string>
    <string name="nav_clear_default_group">Zur Gruppenauswahl</string>
    <string name="nav_update_group_statistic">Gruppenstatistiken aktualisieren</string>
    <string name="menu_show_group_code">Gruppencode anzeigen</string>
    <string name="menu_edit_group_settings">Gruppeneinstellungen</string>
    <string name="menu_session_export_csv">Als CSV exportieren</string>
    <string name="session_creation_create_new_member">Neue:n Mitspieler:in hinzufügen</string>
    <string name="session_member_creation_unique_name">Bitte einen eindeutigen Namen anlegen</string>
    <string name="menu_game_history_change_tacken_mode">Tackenanzeige ändern</string>
    <string name="group_member_creation_short_name_advice">Kurze Namen oder Spitznamen werden empfohlen, damit die Statistiken und Tabellen übersichtlicher sind. Gib mindestens 4 an. Leere Namen werden übersprungen.</string>
    <string name="session_member_creation_short_name_advice">Kurze Namen oder Spitznamen werden empfohlen, damit die Statistiken und Tabellen übersichtlicher sind.</string>
    <string name="group_settings_member_creation_short_name_advice">Kurze Namen oder Spitznamen werden empfohlen, damit die Statistiken und Tabellen übersichtlicher sind.</string>
    <string name="group_code_access_info">Der Gruppencode kann in der Gruppenübersicht oder einer Doppelkopfrunde über das 3-Punkte-Menü angezeigt werden.</string>
    <string name="session_history_open_session">Doppelkopfabend aufrufen</string>
    <string name="desc_session_creation_member_list_create_member">Neuen Mitspieler erstellen und hinzufügen.</string>
    <string name="session_select_members_hint">Wähle Mitspieler:innen für diese Doppelkopfrunde aus oder füge neue hinzu.</string>
    <string name="tv_session_group_name_hint">Lege einen Namen für diese Runde fest.</string>
    <string name="no_sessions_played_yet_title">Misch\' schonmal die Karten!</string>
    <string name="no_sessions_played_yet_desc">Tippe auf den Button unten, um eure erste Doppelkopfrunde zu starten!</string>
    <string name="game_result_help">Gib das Spielergebnis ein, indem du:\n - Die Siegerpartei (Re oder Contra) auswählst\n- Die Tacken (Wertungspunkte, nicht die Kartenpunkte) angibst</string>
    <string name="game_features_help">Wähle die weiteren Eigenschaften dieses Spiels aus. Du kannst angeben:\n- Ob ihr ein Normalspiel oder eine besondere Runde wie z.B. eine Hochzeit oder ein Solo gespielt habt.\n- Falls ihr mit Bockrunden spielt, könnt ihr dies ebenfalls markieren. Das System nimmt dann an, dass die Tacken/Wertungszahl von euch verdoppelt wurde.</string>
    <string name="enable_bockrunden">Bockrunden anschalten</string>
    <string name="save_group_settings">Einstellungen speichern</string>
    <string name="old_player_groups_incompatible_notice">Gruppen, die vor dem 10.06.2024 erstellt wurden sind leider nicht mit dieser Version kompatibel. Bitte erstelle eine neue Gruppe.</string>
    <string name="member_name_hint">Name</string>
    <string name="desc_loading_group_icon">Loading group icon</string>
    <string name="desc_loading_session_icon">Loading session icon</string>
    <string name="desc_button_bockrunden_info">Button Bockrunden-Info</string>
    <string name="desc_doppelkopf_app_icon">Doppelkopf App Icon</string>
    <string name="desc_ranglisten_pokal_icon">Ranglisten Pokal-Icon</string>
    <string name="desc_textstatistik_icon">Textstatistik-Icon</string>
    <string name="bockrunde">Bockrunde</string>
    <string name="group_settings_deactivate_members_description">Füge neue Mitspieler:innen hinzu. Hier könnt ihr auch Spieler:innen als aktiv/inaktiv markieren. Sie werden in Ranglisten und neuen Runden nicht angezeigt.</string>
    <string name="groups_settings_deactivate_members_title">Aktive Mitspieler:innen</string>
    <string name="share_code_dialog_title">Euer ShareCode ist:</string>
    <string name="dialog_share_code_description">Mit diesem Code können andere Spieler:innen dieser Gruppe beitreten. Der Code kann jederzeit über das 3-Punkte-Menü in der Gruppenübersicht angezeigt werden.</string>
    <string name="game_edit_time_limit_description">Spiele können 24 Stunden nach Erstellung bearbeitet werden.</string>
    <string name="desc_game_edit_info">Information zum Spiele-Bearbeiten</string>
    <string name="group_statistic_loading_sessions">Lade Abende für Statistik...</string>
    <string name="group_statistic_calculating">Berechne Statistik...</string>
    <string name="group_statistic_loading_error">Fehler beim Laden der Statistikdaten.</string>
</resources>
