<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_game_creation">

    <fragment
        android:id="@+id/navigation_game_creation"
        android:name="de.timseidel.doppelkopf.ui.session.gamecreation.GameCreationFragment"
        android:label="@string/title_game_creation"
        tools:layout="@layout/fragment_game_creation" />

    <fragment
        android:id="@+id/navigation_game_history"
        android:name="de.timseidel.doppelkopf.ui.session.gamehistory.GameHistoryFragment"
        android:label="@string/title_game_history"
        tools:layout="@layout/fragment_game_history" />

    <fragment
        android:id="@+id/navigation_session_statistic"
        android:name="de.timseidel.doppelkopf.ui.session.statistic.SessionStatisticFragment"
        android:label="@string/title_session_statistic"
        tools:layout="@layout/fragment_session_statistic" />
</navigation>