<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/share_code_dialog_title"
        android:textAlignment="center"
        android:textColor="@color/neural_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_share_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"

        tools:text="123 456"
        android:textAlignment="center"
        android:textColor="@color/primary_dark"
        android:textSize="64sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_share_code_description"
        android:textAlignment="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4sp"
        android:textColor="@color/neural_dark"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_share_code_dialog_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/primary"
        android:insetTop="0dp"
        android:textSize="14sp"
        android:insetBottom="0dp"
        android:text="@string/okay"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconTint="@color/white" />


</LinearLayout>